--- a/index.html
+++ b/index.html
@@ -4,10 +4,44 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+    integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+     crossorigin=""></script>
+    <title>IP Tracking</title>
   </head>
   <body>
-    <div id="app"></div>
+    <header>
+      <h1>IP Address Tracker</h1>
+      <form action="GET">
+        <input type="text">
+        <button id="btn-search"><img src="./icon-arrow.svg" alt=""></button>
+      </form>
+      <div id="result-container">
+        <div class="result-section">
+          <h3 class="section-header">IP ADDRESS</h3>
+          <h2 class="section-result">192.212.174.101</h2>
+        </div>
+        <div class="result-section">
+          <h3 class="section-header">LOCATION</h3>
+          <h2 class="section-result">Brooklyn, NY 100001</h2>
+        </div>
+        <div class="result-section">
+          <h3 class="section-header">TIMEZONE</h3>
+          <h2 class="section-result">UTC -05:00</h2>
+        </div>
+        <div class="result-section">
+          <h3 class="section-header">ISP</h3>
+          <h2 class="section-result">SpaceX Starlink</h2>
+        </div>
+      </div>
+    </header>
+    <div id="map-container">
+      <div id="map"></div>
+    </div>
     <script type="module" src="/main.js"></script>
+    <script type="module" src="./src/map.js"></script>
   </body>
 </html>
