--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
     <header>
       <h1>IP Address Tracker</h1>
       <form action="GET">
-        <input type="text">
+        <input type="text" id="search-input">
         <button id="btn-search"><img src="./icon-arrow.svg" alt=""></button>
       </form>
       <div id="result-container">
         <div class="result-section">
           <h3 class="section-header">IP ADDRESS</h3>
-          <h2 class="section-result">192.212.174.101</h2>
+          <h2 class="section-result" id="ip-searched">192.212.174.101</h2>
         </div>
         <div class="result-section">
           <h3 class="section-header">LOCATION</h3>
-          <h2 class="section-result">Brooklyn, NY 100001</h2>
+          <h2 class="section-result" id="result-address">Brooklyn, NY 100001</h2>
         </div>
         <div class="result-section">
           <h3 class="section-header">TIMEZONE</h3>
-          <h2 class="section-result">UTC -05:00</h2>
+          <h2 class="section-result" id="result-timezone">UTC -05:00</h2>
         </div>
         <div class="result-section">
           <h3 class="section-header">ISP</h3>
-          <h2 class="section-result">SpaceX Starlink</h2>
+          <h2 class="section-result" id="result-name">SpaceX Starlink</h2>
         </div>
       </div>
     </header>
-    <div id="map-container">
-      <div id="map"></div>
+    <div id="map"></div>
     </div>
     <script type="module" src="/main.js"></script>
     <script type="module" src="./src/map.js"></script>
+    <script src="sweetalert2.all.min.js"></script>
   </body>
 </html>
