responsive website working

--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
           <h3 class="section-header">IP ADDRESS</h3>
           <h2 class="section-result" id="ip-searched">192.212.174.101</h2>
         </div>
+        <div class="break"></div>
         <div class="result-section">
           <h3 class="section-header">LOCATION</h3>
           <h2 class="section-result" id="result-address">Brooklyn, NY 100001</h2>
         </div>
+        <div class="break"></div>
         <div class="result-section">
           <h3 class="section-header">TIMEZONE</h3>
           <h2 class="section-result" id="result-timezone">UTC -05:00</h2>
         </div>
+        <div class="break"></div>
         <div class="result-section">
           <h3 class="section-header">ISP</h3>
           <h2 class="section-result" id="result-name">SpaceX Starlink</h2>
