--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
     <header>
       <h1>IP Address Tracker</h1>
       <form action="GET">
-        <input type="text" id="search-input">
+        <input type="text" id="search-input" placeholder="Serach for any IP address or domain">
         <button id="btn-search"><img src="./icon-arrow.svg" alt=""></button>
       </form>
       <div id="result-container">
         <div class="result-section">
           <h3 class="section-header">IP ADDRESS</h3>
-          <h2 class="section-result" id="ip-searched">192.212.174.101</h2>
+          <h2 class="section-result" id="ip-searched">---</h2>
         </div>
         <div class="break"></div>
         <div class="result-section">
           <h3 class="section-header">LOCATION</h3>
-          <h2 class="section-result" id="result-address">Brooklyn, NY 100001</h2>
+          <h2 class="section-result" id="result-address">---</h2>
         </div>
         <div class="break"></div>
         <div class="result-section">
           <h3 class="section-header">TIMEZONE</h3>
-          <h2 class="section-result" id="result-timezone">UTC -05:00</h2>
+          <h2 class="section-result" id="result-timezone">---</h2>
         </div>
         <div class="break"></div>
         <div class="result-section">
           <h3 class="section-header">ISP</h3>
-          <h2 class="section-result" id="result-name">SpaceX Starlink</h2>
+          <h2 class="section-result" id="result-name">---</h2>
         </div>
       </div>
     </header>
